<resources>
    <string name="app_name">QUIZ: Basic WorldGeography</string>
    <string name="welcome_to_quiz_basic_worldgeography">Welcome to QUIZ: Basic WorldGeography</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="score">\n Score</string>
    <string name="questionOne">What is The Largest Continent?</string>
    <string name="q1a1">Africa</string>
    <string name="q1a2">Asia</string>
    <string name="questionTwo">What is The Largest Country in Population?</string>
    <string name="q2a1">China</string>
    <string name="q2a2">India</string>
    <string name="questionThree">Which Country is The Largest in The World by Surface Area?</string>
    <string name="q3a1">Russia</string>
    <string name="q3a2">Canada</string>
    <string name="questionFour">Which country is the largest in South America by surface area?</string>
    <string name="q4a1">Brazil</string>
    <string name="q4a2">Argentina</string>
    <string name="questionFive">What is The Largest Hot Desert?</string>
    <string name="q5a1">Arabian Desert</string>
    <string name="q5a2">Sahara</string>
    <string name="questionSix">What is The longest River in the World?</string>
    <string name="q6a1">Nile River</string>
    <string name="q6a2">Amazon River</string>
    <string name="questionSeven">What is The Highest Mountain Peak?</string>
    <string name="q7a1">Mount Godwin-Austen</string>
    <string name="q7a2">Mount Everest</string>
    <string name="questionEight">Which of these countries have borders with each other?</string>
    <string name="q8a1">Germany</string>
    <string name="q8a2">Croatia</string>
    <string name="q8a3">France</string>
    <string name="q8a4">Switzerland</string>
    <string name="map_for_the_world">Map for The World</string>
    <string name="insert_name">Please Insert your name and lets begin</string>
    <string name="name">Name</string>
    <string name="empty" />
</resources>
